# QuoteMiner

./: .env.template  .gitignore  LICENSE  concept.ipynb  main.py  motivational_lines.json  motivational_lines.txt  prompt.txt  pyproject.toml  readme.md  requirements.txt
config/: settings.py
src/: concept.ipynb  main.py  quote_extraction.py  timestamp_utils.py  transcription.py  video_downloader.py  video_processing.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  quote.py  video_models.py
src/tests/: test_quote_extraction.py
src/utils/: __init__.py  logger.py  quote_extraction.py  transcription.py  video_cropper.py  video_downloader.py
