[project]
name = "quoteminer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.58.2",
    "faster-whisper>=1.1.1",
    "moviepy>=2.2.1",
    "opencv-python>=4.12.0.88",
    "pyannote-audio>=3.3.2",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
]
