[project]
name = "quoteminer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.58.2",
    "faster-whisper>=1.1.1",
    "moviepy>=2.2.1",
    "opencv-python>=4.12.0.88",
    "pyannote-audio>=3.3.2",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "markupsafe==2.1.5",
    "torch>=2.7.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true